# news-genie

./: .gitignore  README.md
backend/: NOTES.MD  langgraph.json  pyproject.toml  requirements.txt
backend/api/: main.py
backend/graph/: workflow.py
backend/graph/nodes/: __init__.py  classify.py  format.py  general.py  news.py
backend/graph/state/: __init__.py  schema.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: CategorySelector.tsx  ChatInput.tsx  ChatMessage.tsx
frontend/src/lib/: api.ts
